# ac-machine

./: ACMachine.cabal  AhoCorasick.hs  ac-machine.cabal  acm.hs
Data/: AhoCorasick.hs
examples/: Simple.hs
