name:                ac-machine
version:             0.1.0.0
synopsis:            Aho-Corasick string matching algorithm in Haskell
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yuta Taniguchi
maintainer:          yuta.taniguchi.y.t@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.AhoCorasick
  -- other-modules:       
  other-extensions:    DeriveGeneric
  build-depends:       base >=4.6 && <4.7, hashable >=1.2 && <1.3, unordered-containers >=0.2 && <0.3
  -- hs-source-dirs:      
  default-language:    Haskell2010