name:                ac-machine
version:             0.1.0.0
synopsis:            Aho-Corasick string matching algorithm in Haskell
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yuta Taniguchi
maintainer:          yuta.taniguchi.y.t@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  examples/Simple.hs
cabal-version:       >=1.10

library
  exposed-modules:     Data.AhoCorasick
  other-extensions:    DeriveGeneric
  build-depends:       base >=4.6 && <4.7, hashable >=1.2 && <1.3, unordered-containers >=0.2 && <0.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/yuttie/ACMachine.git
